--- a/01gy_cpp/01gy_cpp.tex
+++ b/01gy_cpp/01gy_cpp.tex
@@ -73,15 +73,25 @@
 		
 		1. óra
 	\end{center}
-	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor gyakorlatán. (\today)
+	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor gyakorlata alapján. (\today)
 	\section{Előszó}
-	...
+	Ez a jegyzet az ELTE IK hallgatóinak készült a Programozási Nyelvek: C++ c. tárgyhoz. A jegyzet segítségével a gyakorlaton és előadáson elhangzott anyagok mélyebben elsajátíthatóak, néhány helyen hiányos jegyzetet jól kiegészít. Merjük gondolni, hogy az, aki a jegyzetben leírtakat mind magas szinten megérti, az olvasás mellé a példakódokat lefuttatja és módosításokkal kitapasztalja azok működését, az jó eséllyel a vizsgán (különösképpen a gyakorlati részén) nem fog sikertelenül távozni.
+	
+	Azonban a jegyzet \textbf{nem 100\%-ban fedi le az előadás és gyakorlat anyagát.} Ez azt jelenti, hogy ahhoz, hogy a tárgyat valaki (garantáltan) négyesre vagy jobbra teljesítse, az előadáson és gyakorlaton megszerzett tudásokra is szüksége lesz. Példaképp, valamennyi programozási konvenció, a programozási nyelvek történelme, és még megannyi dolog nem szerepel a jegyzetben, és később se fog, azonban ezeknek az ismerete mindenképpen fontos és elvárható egy programtervező informatikustól.
+	
+	\smallskip
+	Kihangsúlyozandó, hogy a jegyzet elsősorban a vizsga előtti felkészülésre íródott, így a vizsgán szükséges gyakorlat nélkül önmagában nem elég.
+	
+	\smallskip
+	A jegyzet első számú forrása \textsc{Horváth} Gábor 2015/2016/2 és 2016/2017/1 félévében tartott gyakorlatai, \textsc{Pataki} Norbert 2015/2016/1 előadásai, valamint a gyakorlaton megjelent helyettesítő tanárok órái: \textsc{Porkoláb} Zoltán, \textsc{Brunner} Tibor.
+	
+	Külön köszönet jár \textsc{Horváth} Gábornak, aki a jegyzet javításában segített és aktívan segít, és mindenki másnak, aki az esetleges hibák észrevétele után szóltak.
 	\subsection{Szükséges háttértudás}
 	Ez a jegyzet feltételezi, hogy az Olvasó elvégezte a Programozási Alapismeretek c. tárgyat, és a Programozás tárgyat vagy ezzel párhuzamosan végzi, vagy már teljesítette. Így támaszkodunk arra, hogy az Olvasó tisztában van a primitív típusokkal (\texttt{int}, \texttt{float}, \texttt{double}, stb.), alap szinten a kiíratással és beolvasással, a konstanssággal, létre tud hozni függvényeket és meg is tudja hívni azokat, képes egy helyes C++ kódot lefordítani (még ha csak fejlesztői környezettel is), valamint egyszerűbb algoritmusokat is tud (pl. maximum keresés, rendezés).
 	\section{Bevezető}
 	A C++ többek között a hatákonyságáról is híres. Andrei Alexandrescu azt nyilatkozta, hogy amikor a Facebooknál a backend kódján 1\%ot sikerült optimalizálni, több mint 10 évnyi fizetését spórolta meg a cégnek havonta csak az áramköltségen. Nem használ garbage collectort: nincs nem várt szünet a program végrehajtásában a menedzselt nyelvekkel szemben.
 
-	A C++-szal kapcsolatban az egyik gyakori tévhit, hogy egy alacsony szintű nyelvről van szó. Bár a nyelv lehetőséget biztosít arra, hogy alacsony szinten hozzáférjünk a hardvereinkhez, számos gazdag absztrakciós lehetőséget tartalmaz. Ezeknek a használatával magas szintű kód írására is kíválóan alkalmas. A legtöbb nyelvhez képest abban emelkedik ki, hogy a C++ nyelvben ezeknek az absztrakcióknak ritkán van futási idejű költsége. Legtöbbször a fordítóprogram teljesen el tudja tüntetni ezeket az absztrakciókat a programból a fordítás során.
+	A C++-szal kapcsolatban az egyik gyakori tévhit, hogy az egy alacsony szintű nyelv. Bár a nyelv lehetőséget biztosít arra, hogy alacsony szinten hozzáférjünk a hardvereinkhez, számos gazdag absztrakciós lehetőséget tartalmaz. Ezeknek a használatával magas szintű kód írására is kíválóan alkalmas. A legtöbb nyelvhez képest abban emelkedik ki, hogy a C++ nyelvben ezeknek az absztrakcióknak ritkán van futási idejű költsége. Legtöbbször a fordítóprogram teljesen el tudja tüntetni ezeket az absztrakciókat a programból a fordítás során.
 	
 	A C++ filozófiájának fontos eleme, hogy ha nem használunk egy adott nyelvi eszközt, akkor annak ne legyen hatása a program teljesítményére.
 	
@@ -90,7 +100,7 @@
 	\medskip
 	Cél: a tárgy során kialakítani a nyelvvel kapcsolatban egy intuíciót, ami segítéségével elkerülhetőek alapvető hibák is. Az előzménytárgyakban az egyszerűség kedvéért gyakran féligazságok hangzottak el, ezeket is helyre kell rakni.
 	\subsection{Mi az a C++?}
-	Alapvetően a nyelv két összetevőből áll. Az aktuális szabványból és annak implementációiból (fordítók + szabványkönyvtárak). A szabvány, ami meghatározza a nyelv nyelvtanját, valamint a szemantikát: mit jelentenek a leforduló programok (nem definiál minden részletet). Emellett a szabvány definiálja a szabványkönyvtárat is, amit minden szabványos C++ fordító mellé szállítani kell. Az első C++ szabvány a {C++98} volt. További szabványai: {C++03}, {C++11}, {C++14}, {C++17}.
+	Alapvetően a nyelv két összetevőből áll. Az aktuális szabványból és annak implementációiból (fordítók + szabványkönyvtárak). A szabvány az, ami meghatározza a nyelv nyelvtanját, valamint a szemantikát: mit jelentenek a leforduló programok (nem definiál minden részletet). A szabvány emellett definiálj egy szabványkönyvtárat is, amit minden szabványos C++ fordító mellé szállítani kell. Az első C++ szabvány a {C++98} volt. További szabványai: {C++03}, {C++11}, {C++14}, {C++17}.
 	
 	\medskip
 	A szabvány alapján számos fordító (implementáció) létezik a C++ kódok fordítására: MSVC, GCC, Clang.
@@ -113,8 +123,9 @@ int main()
 	cout << "Hello World!" << endl;
 }
 	\end{lstlisting}
-	\texttt{main.cpp} itt egy \textbf{fordítási egység} (\textit{compilation unit}). Fordításkor fordítási egységeket fordítunk gépi kódra.
+	A fájl maga, \texttt{main.cpp}, egy \textbf{fordítási egység} (\textit{compilation unit}). Fordításkor fordítási egységeket fordítunk gépi kódra.
 	
+	\medskip
 	A kód legelső sorában található az ismerős \texttt{\#include <iostream>}. Az \texttt{iostream} egy un. \textbf{header fájl}, mely tartalmaz valamennyi beolvasással és kiíratással kapcsolatos standard osztályt, függvényt és változót. Maga az \texttt{iostream} header természetesen egy ugyanolyan C++ kódot tartalmaz, melyet mi magunk is írunk, a \texttt{\#include} parancs hatására pedig a teljes tartalma a mi fordítási egységünkbe kerül. A fordító számára a mi fordítási egységünk (\texttt{main.cpp}) úgy néz ki, mintha mi magunk írtuk volna meg az egész \texttt{iostream}-ben található kódot, melynek a végén szerepel a mi kis Hello World programunk.
 	
 	A header fájlokról később bővebben beszélünk, egyenlőre mondjuk róluk annyit, hogy fordítási egységekbe szoktuk őket beilleszteni, önmagukban nem szokás őket fordítani.
@@ -363,7 +374,7 @@ int main()
 	A következő pár szekcióban megismerjük a fenti 3 lépést alaposabban.
 	
 	\subsection{Preprocesszálás}
-	A preprocesszor (vagy előfeldolgozó) használata a legtöbb esetben kerülendő. Ez alól kivétel a header állományok include-olása. A preprocesszor \textbf{primitív} szabályok alapján dolgozik és \textbf{nyelvfüggetlen.} Mivel semmit nem tud a C++-ról, ezért sokszor a fejlesztő számára meglepő viselkedést okozhat a használata. Emellett nem egyszerű diagnosztizálni a preprocesszor használatából származó hibákat. További probléma, hogy az automatikus refaktoráló eszközök használatát is megnehezíti a preprocesszor túlhasználata.
+	A preprocesszor (vagy előfeldolgozó) használata a legtöbb esetben kerülendő. Ez alól kivétel a header állományok include-olása. A preprocesszor primitív szabályok alapján dolgozik és \textbf{nyelvfüggetlen.} Mivel semmit nem tud a C++-ról, ezért sokszor a fejlesztő számára meglepő viselkedést okozhat a használata. Emiatt nem egyszerű diagnosztizálni a preprocesszor használatából származó hibákat. További probléma, hogy az automatikus refaktoráló eszközök használatát is megnehezíti a preprocesszor túlhasználata.
 	
 	A következőkben néhány preprocesszor direktívával fogunk megismerkedni. Minden direktíva \texttt{\#} jellel kezdődikcl. Ezeket a sorokat a fordító a program fordítása szempontjából figyelmen kívül hagyja.
   \bigskip
@@ -444,7 +455,7 @@ ALMA ALMA ALMA
 #include "pp.h"
 	\end{lstlisting}
 	
-	Egy trükk segítségével megakadályozhatjuk azt, hogy többször be legyen illesztve \texttt{FECSKE}. Először megnézzük, hogy \texttt{\_PP\_H\_} szimbólum definiálva van-e. Ha nincs, definiáljuk. Mikor legközelebb ezt meg akarnánk tenni (a második \texttt{\#include "pp."} sornál), nem illesztjük be a \texttt{FECSKE}-t, mert \texttt{\#ifndef \_PP\_H\_} kivágja azt a szövegrészt.
+	Egy trükk segítségével megakadályozhatjuk azt, hogy többször be legyen illesztve \texttt{FECSKE}. Először megnézzük, hogy \texttt{\_PP\_H\_} szimbólum definiálva van-e. Ha nincs, definiáljuk. Mikor legközelebb ezt meg akarnánk tenni (a második \texttt{\#include "pp.h"} sornál), nem illesztjük be a \texttt{FECSKE}-t, mert \texttt{\#ifndef \_PP\_H\_} kivágja azt a szövegrészt.
 	
 	Ez az úgy nevezett \textbf{header guard} vagy \textbf{include guard.}
 	
@@ -514,7 +525,7 @@ int main()
 	
 	Szokás a fecske.h-t a fecske.cpp-be is includeolni, mert ha véletlenül ellent mondana egymásnak a definíció a cpp fájlban és a deklaráció a header fájlban akkor a fordító hibát fog jelezni. (Például ha eltérő visszatérési érték típust adtunk meg a definíciónak a C++ fájlban és a deklarációnak a header fájlban.)
 	
-	Valami akárhányszor deklarálhatunk, azonban ha a deklarációk ellentmondanak egymásnak, akkor fordítási hibát kapunk. Definiálni viszont mindent pontosan egyszer kell. Több definíció vagy a definíció hiánya problémát okozhat. Ezt az elvet szokás \textbf{One Definition Rule}-nak, vagy röviden \textbf{(ODR)}-nek hívni.
+	Egy adott függvényt (vagy objektumot, osztályt) akárhányszor deklarálhatunk, azonban ha a deklarációk ellentmondanak egymásnak, akkor fordítási hibát kapunk. Definiálni viszont mindent pontosan egyszer kell. Több definíció vagy a definíció hiánya problémát okozhat. Ezt az elvet szokás \textbf{One Definition Rule}-nak, vagy röviden \textbf{(ODR)}-nek hívni.
 	\bigskip
 	
 	\fbox{\textbf{fecske.h}}
@@ -644,7 +655,7 @@ void f()
 	x = 0;
 }
 	\end{lstlisting}
-	Csupán annyi a fontos, hogy \texttt{x}-et valamikor definiálni is kell (mely jelenleg a \texttt{main.cpp}-bentalálható).
+	Egy globális változó deklarációja hasonlít a függvényekéhez, információval látja el a fordítót arról hogy az adott szimbólum egy globális változó, és milyen a típusa. Csupán annyi a fontos, hogy \texttt{x}-et valamikor definiálni is kell (mely jelenleg a \texttt{main.cpp}-bentalálható).
 	\begin{note}
 		A globális változók deklarációit érdemes külön header fájlba kigyűjteni.
 	\end{note}
