--- a/07gy_cpp/07gy_cpp.tex
+++ b/07gy_cpp/07gy_cpp.tex
@@ -225,10 +225,8 @@ int main()
 	\begin{lstlisting}
 inline void f() {}
 	\end{lstlisting}
-	
-	\medskip
 	Az ábra jól demonstrálja a problémát.
-	\begin{figure}[t]
+	\begin{figure}[h]
 		\centering
 		\begin{tikzpicture}
 		\tikzstyle{HeaderName} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
