--- a/06gy_cpp/06gy_cpp.tex
+++ b/06gy_cpp/06gy_cpp.tex
@@ -221,28 +221,107 @@ private:
 	Van egy súlyos következménye az imént bevezetett adatrejtésnek. Például, így nem tudunk hozzáférni a második elemhez kívülről. Vagy bármelyik másikhoz. Ilyenkor a naív megoldás az, ha módosítjuk a listát, és minden olyan függvényt, aminek hozzá kéne férnie az elemekhez, metódussá tesszük. Hiszen a lista metódusai hozzáférnek a privát adattagokhoz is.
 	
 	Ezt ugyanakkor nem akarjuk minden egyes függvénnyel megtenni. A végén nagyra nőne a lista osztály, ami nagyban rontja az kód érthetőségét és fenntarthatóságát. Emellett a reprezentáció változtatásával megint sok függvényt kellene módosítani.
+	
+	\medskip
+	Próbáljunk találni egy megoldást erre a problémára. Figyeljük meg (feltéve hogy az adattagok még nem privátok) hogy így például végig tudnánk menni a lista elemein:
+	\begin{lstlisting}
+int main()
+{
+	List head(8);
+	head.add(7); head.add(2);
+	List *ptr = &head; //ptr első elemre mutat
+	ptr = ptr->next; //második elemre
+	ptr = ptr->next; //harmadik elemre
+}
+	\end{lstlisting}
+	
+	\begin{figure}[h]
+		\centering
+		\begin{tikzpicture}
+		\tikzstyle{Heap} = [rectangle, minimum width=4.2cm, minimum height=2cm, text centered, draw=black, fill=white]
+		\tikzstyle{Stack} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=white]
+		\tikzstyle{ListNode} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{arrow} = [thick,->,>=stealth]
 		
-	Írjunk felsorolót, amivel hozzáférhetünk az elemekhez kívülről is.
+		\draw [thick, black] (-3, 0) -- (-1, 0);
+		\draw [thick, black] (-3, 0) -- (-3, 3);
+		\draw [thick, black] (-1, 0) -- (-1, 3);
+		\node[Heap] at (2,1.5){};
+		\node (7node) [ListNode] at (1.5,1) {7};
+		\node (2node) [ListNode] at (2.8,2) {2};
+		\node (ptr) [ListNode] at (-2,0.85) {ptr};
+		\node (headNode) [ListNode] at (-2,0.3) {head (8)};
+		
+		\path[every node/.style={font=\sffamily\small}]
+		(ptr) edge[bend right = 90, thick, ->] node [right] {} (headNode);
+		\draw [arrow] (7node) -- (2node);
+		\draw [arrow] (headNode) -- (7node);
+		\end{tikzpicture}
+		
+		\bigskip
+		\hspace{1.5mm} \begin{tikzpicture}
+		\tikzstyle{Heap} = [rectangle, minimum width=4.2cm, minimum height=2cm, text centered, draw=black, fill=white]
+		\tikzstyle{Stack} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=white]
+		\tikzstyle{ListNode} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{arrow} = [thick,->,>=stealth]
+		
+		\draw [thick, black] (-3, 0) -- (-1, 0);
+		\draw [thick, black] (-3, 0) -- (-3, 3);
+		\draw [thick, black] (-1, 0) -- (-1, 3);
+		\node[Heap] at (2,1.5){};
+		\node (7node) [ListNode] at (1.5,1) {7};
+		\node (2node) [ListNode] at (2.8,2) {2};
+		\node (ptr) [ListNode] at (-2,0.85) {ptr};
+		\node (headNode) [ListNode] at (-2,0.3) {head (8)};
+		\draw [arrow] (7node) -- (2node);
+		\draw [arrow] (headNode) -- (7node);
+		\draw [arrow] (ptr) -- (7node);
+		\end{tikzpicture}
+		
+		\bigskip
+		\hspace{4mm}\begin{tikzpicture}
+		\tikzstyle{Heap} = [rectangle, minimum width=4.2cm, minimum height=2cm, text centered, draw=black, fill=white]
+		\tikzstyle{Stack} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=white]
+		\tikzstyle{ListNode} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{arrow} = [thick,->,>=stealth]
+		
+		\draw [thick, black] (-3, 0) -- (-1, 0);
+		\draw [thick, black] (-3, 0) -- (-3, 3);
+		\draw [thick, black] (-1, 0) -- (-1, 3);
+		\node[Heap] at (2,1.5){};
+		\node (7node) [ListNode] at (1.5,1) {7};
+		\node (2node) [ListNode] at (2.8,2) {2};
+		\node (ptr) [ListNode] at (-2,0.85) {ptr};
+		\node (headNode) [ListNode] at (-2,0.3) {head (8)};
+		\draw [arrow] (7node) -- (2node);
+		\draw [arrow] (headNode) -- (7node);
+		\draw [arrow] (ptr) -- (2node);
+		\end{tikzpicture}
+		\smallskip
+		
+		Pointer segítségével végig tudunk menni (iterálni) a lista elemein.
+	\end{figure}
+	A problémát tehát orvosolhatnánk azzal, hogyha ezt a pointert adattaggá tennénk, és metódusokon keresztül tudnánk léptetni, illetve az adott elemet lekérdezni. Ezt megoldhatjuk egy un. felsorolóval:
 \begin{lstlisting}
 class List
 {
 	//...
 	
-	void First()
+	void First() //pointert az első elemre állítja
 	{
 		cursor = this;
 	}
-	int& Current()
+	int& Current() //adott elem lekérdezése
 	{
 		return cursor->data;
 	}
-	void Next()
+	void Next() //pointer léptetése a következő elemre
 	{
 		cursor = cursor->next;
 	}	
-	bool End()
+	bool End() //a lista végére értük-e
 	{
-		return cursor == 0;
+		return cursor == NULL;
 	}
 	
 private:
@@ -251,10 +330,15 @@ private:
 	List *cursor;
 };
 \end{lstlisting}
-	Figyeljük meg, hogy \texttt{Current()} referenciával tér vissza, hogy ne \texttt{data} másolatát, hanem a \texttt{data}-ra hivatkozó referenciát kapjunk meg, így tudjuk a lista elemeinek az értékeit módosítani.
-	
-	\medskip
-	Első látásra a problémát orvosoltuk, tudunk a listákkal tárolt adatokkal dolgozni (pl. összeadni őket, stb). De egy rendezésnél már problémásabb. Ha csak egy kurzorunk van, nem tudunk egyszerre 2 elemhez hozzáférni, hogy összehasonlítsuk őket vagy megcseréljük őket. Egy lehetséges megoldás:
+	Figyeljük meg, hogy \texttt{Current()} referenciával tér vissza, hogy ne \texttt{data} másolatát, hanem a \texttt{data}-ra hivatkozó referenciát kapjunk meg, így tudjuk a lista elemeinek az értékeit módosítani. Az \texttt{End} metódus azt vizsgálja meg, hogy a \texttt{cursor} nullpointer-e, lévén a lista utolsó eleme mindig nullpointer.
+	\begin{note}
+		Gyorsan megállapíthatjuk, hogy ha az \texttt{End} metóus igazat ad, akkor \texttt{Current} metódus egy nullpointer dereferálna, ami nem definiált viselkedés. Ez azonban nem probléma, hisz addigra a lista összes elemén végigiteráltunk. Tulajdonképpen azt is mondhatjuk, hogy ekkor \texttt{cursor} a lista ,,utolsó utáni elemére mutat''. 
+	\end{note}
+\begin{lstlisting}
+for(head.Init(); !head.End(); head.Next())
+	doSomething(head.Current());
+\end{lstlisting}
+	Első látásra a problémát orvosoltuk, tudunk a listákkal tárolt adatokkal dolgozni (pl. összeadni őket, stb). De egy rendezésnél már problémásabb. Ha csak egy kurzorunk van, nem tudunk egyszerre 2 elemhez hozzáférni, hogy összehasonlítsuk őket vagy megcseréljük őket. Egy lehetséges megoldás, ha még egy kurzort hozzáadunk a listához:
 \begin{lstlisting}
 class List
 {
@@ -302,35 +386,12 @@ private:
 };
 \end{lstlisting}
 	Ezzel már egy rendezést meg tudunk oldani. De talán érezhető, hogy ez nem a legszebb megoldás. Ha három \texttt{cursor} kéne egy algoritmushoz, akkor megint bajban lennénk. Ennél létezik sokkal szofisztikáltabb megoldás: az \textbf{iterátorok}.
-	Az iterátorok a pointerek általánosításai, segítségükel tudunk végigiterálni egy konténer elemein (azaz velük tudjuk lekérdezni a konténer elemeit). Ehhez szükségünk van arra, hogy tudjuk hol kezdődik és végződik a konténerünk. E láncolt lista esetében hozzá tudunk férni az első elemhez (az lesz ugye \texttt{head} a fenti példákban) és tudjuk hogy mindig nullpointerrel az utolsó elemben lévő mutató értéke. Legyen az iterátunk neve \texttt{Iterator}!
-\begin{lstlisting}
-class List
-{
-	//...
-public:
-	Iterator begin()
-	{
-		return Iterator(this);
-	}
-	Iterator end()
-	{
-		return Iterator(0);
-	}
-};
-\end{lstlisting}
-	E két metódus segítségével már meg tudjuk adni a lista elejét és végét! A \texttt{head.begin()} vissza fog adni egy iterátort, ami a \texttt{head} a legelső elemére mutat, \texttt{head.end()} az utolsó utáni elem. Már csak magát az iterátort kell megírni, mely egy un. \textit{forward iterator} lesz.
-	\medskip
-
-	Egy \texttt{T} típus \textbf{forward iterator}, ha rendelkezik:
-	\begin{enumerate}
-		\item \texttt{++} operátorral
-		\item egyenlőség vizsgáló operátorral \texttt{==}
-		\item egyenlőtlenség vizsgáló operátorral \texttt{!=}
-		\item dereferáló operátorral \texttt{*}
-	\end{enumerate}
-	De hova írjuk az \texttt{Iterator} osztályt? Hiszen ha a lista elé tesszük, az \texttt{Iterator} nem fogja tudni, hogy mi az a \texttt{List}. Ha utána tesszük, nem fogja tudni a \texttt{List} hogy mi az az \texttt{Iterator}. Erre szükség van a Listában az \texttt{end} és a \texttt{begin} metódus megírásához. A körkörös függőség feloldása érdekében \textbf{forward deklarálni} fogunk.
+	
+	Az iterátorok a pointerek általánosításai, segítségükel tudunk végigiterálni egy konténer elemein (azaz velük tudjuk lekérdezni a konténer elemeit). A problémát orvosolandó, külön osztályt is fognak kapni.
+	
+	Amíg amíg a kurzor adattag volt, könnyedén meg tudtuk adni a konténerünk első és utolsó elemét, azonban ezt most máshogy kell megoldanunk. Először is, állapodjunk meg abban, hogy leendő iterátorunk neve \texttt{Iterator} legyen. Mivel tudjuk, hogy lényegében egy pointert fogunk osztályba csomagolni, már valami ötletünk lehet arról, hogyan fog kinézni:
 	\begin{lstlisting}
-class List; //forward declaration
+class List {/* ... */};
 
 class Iterator
 {
@@ -344,17 +405,54 @@ public:
 	{
 		return !(*this == other);
 	}
-	//...
+	//TODO: kéne valami a léptetésre, adott elem lekérdezésére
 private:
-	List *p; //(*)
+	List *p;
 };
 
-class List {//...};
 	\end{lstlisting}
-	A fordító ezek után a csillaggal jelölt sorban nem fog arra panaszkodni, hogy a \texttt{List} egy ismeretlen azonosító. A forward deklaráció azt mondja a fordítónak, hogy a \texttt{List} később, akár egy másik fordítási egységben definiálva lesz. Amennyiben nem akarjuk dereferálni \texttt{p}-t, elég csupán a forward deklarálni!
+	\begin{note}
+		Figyeljük meg, hogy a \texttt{!=} operátor meghívja a \texttt{==} operátort, és negálja. Ha bármikor módosulna az iterátorunk implementációja, elég lesz \texttt{==} operátort módosítani.
+	\end{note}
+	A megoldás az lesz, hogy nem az \texttt{Iterator}, hanem a \texttt{List} osztályban fog szerepelni a lista elejét és hátulját lekérdező metódus:
+	\begin{lstlisting}
+class List
+{
+	//...
+public:
+	Iterator begin()
+	{
+		return Iterator(this);
+	}
+	Iterator end()
+	{
+		return Iterator(0);
+	}
+};
+
+class Iterator {/* ... */};
+	\end{lstlisting}
+	 A \texttt{head.begin()} vissza fog adni egy iterátort, ami a \texttt{head} a legelső elemére mutat, \texttt{head.end()} az utolsó utáni elem. Az iterátor osztályból már csak a lépegetés és az adott elem lekérdezése hiányzik, melyeket a \texttt{++} és a \texttt{*} operátorok túlterhelésével fogunk megoldani. Megállapítható, hogy \texttt{Iterator} kielégíti az un. \textbf{forward iterátor} követelményeit:
+
+	Egy \texttt{T} típus \textbf{forward iterator}, ha rendelkezik:
+	\begin{enumerate}
+		\item \texttt{++} operátorral
+		\item egyenlőség vizsgáló operátorral \texttt{==}
+		\item egyenlőtlenség vizsgáló operátorral \texttt{!=}
+		\item dereferáló operátorral \texttt{*}
+	\end{enumerate}
+	Sajnos azonban fordítási hibát kapunk. Hova írjuk az \texttt{Iterator} osztályt? Hiszen ha a lista elé tesszük, az \texttt{Iterator} nem fogja tudni, hogy mi az a \texttt{List}. Ha utána tesszük, nem fogja tudni a \texttt{List} hogy mi az az \texttt{Iterator}. Erre szükség van a listában az \texttt{end} és a \texttt{begin} metódus megírásához. A körkörös függőség feloldása érdekében \textbf{forward deklarálni} fogunk. 
+	\begin{lstlisting}
+class List; //forward declaration
+
+class Iterator {/* ... */};
+
+class List {/* ... */};
+	\end{lstlisting}
+	A fordító ezek után nem fog arra panaszkodni, hogy a \texttt{List} egy ismeretlen azonosító (\textit{incomplete type}). A forward deklaráció azt mondja a fordítónak, hogy a \texttt{List} később, akár egy másik fordítási egységben definiálva lesz. Amíg egy pointerrel csak az adott memóriaterületre mutatunk, de rajta keresztül nem akarunk műveletek végrehajtani (azaz, nem akarjuk a pointert dereferálni) addig nem szükséges az adott osztályt definiálni. (Például így lehet az, hogy minden pointer mérete egyenlő.)
 	
 	\medskip
-	Még hiányzik a \texttt{++} és a \texttt{*} operátor.
+	Még hiányzik a \texttt{++} és a \texttt{*} operátor. Ez előbbi esetében ne felejtsük el, hogy egy pointer léptetése esetén visszakapjuk az adott obejktumot (azaz, \texttt{*++ptr = 5} helyes, hisz \texttt{++ptr} visszaadja \texttt{ptr}-t), így a mi operátorunkkal is így kéne eljárni.
 \begin{lstlisting}
 class List;
 
@@ -385,7 +483,7 @@ private:
 
 class List {//...};
 \end{lstlisting}
-  Amennyiben az előbb említett operátorokat az \texttt{Iterátor}on belül fejtjük ki, a fordító dob egy hibaüzenetet, miszerint a \texttt{List} egy un. \textit{incomplete type}. A forward deklaráció miatt a fordító tudja már, hogy a \texttt{List} az egy osztály. De nem tudja ellenőrizni, hogy \texttt{next} adattaggal rendelkezik-e. Ezért ezeket a tagfüggvényeket a \texttt{List} kifejtése után kell írni.
+	Amennyiben az előbb említett operátorokat az \texttt{Iterátor}on belül fejtjük ki, pont az előbb említett hibát követjük el: dereferáltuk \texttt{p}-t, melyhez ismerni kéne az osztály implementációját. A forward deklaráció miatt a fordító tudja már, hogy a \texttt{List} az egy osztály, de nem tudja ellenőrizni, hogy \texttt{next} adattaggal rendelkezik-e. Ezért ezeknek a tagfüggvényeknek szét kell választani a deklarációját és definícióját úgy, hogy a definíció a \texttt{List} kifejtése után szerepeljen:
 \begin{lstlisting}
 class List;
 
@@ -393,11 +491,11 @@ class Iterator
 {
 public:
 	Iterator(List *_p) : p(_p) {}
-	bool operator==(Iterator &other) const
+	bool operator==(Iterator &other)
 	{
 		return p == other.p;
 	}
-	bool operator!=(Iterator &other) const
+	bool operator!=(Iterator &other)
 	{
 		return !(*this == other);
 	}
@@ -409,6 +507,7 @@ private:
 
 class List {//...};
 
+//hivatkoznunk kell arra, hogy operator++ Iterator egy metódusa
 Iterator Iterator::operator++()
 {
 	p = p->next;
@@ -419,7 +518,7 @@ int& Iterator::operator*()
 	return p->data;
 }
 \end{lstlisting}
-  Felmerül még egy probléma: a \texttt{next} és \texttt{data} private adattagok. Az \texttt{Iterator} nem fér hozzá! Erre megoldás, ha \textbf{barát} (\textit{friend}) osztállya lesz az Iterátor a \texttt{List}nek.
+  Felmerül még egy probléma: a \texttt{next} és \texttt{data} private adattagok. Az \texttt{Iterator} nem fér hozzá! Erre megoldás, ha \textbf{barát} (\textit{friend}) osztálya lesz az Iterátor a \texttt{List}nek.
 	\begin{lstlisting}
 class List
 {
@@ -431,8 +530,9 @@ class List
 	A barátként deklarált osztályok és függvények hozzá tudnak férni az osztály privát adattagjaihoz is.
 	
 	\smallskip
-	Az így kapott iterátorunkkal be tudjuk járni a lista elemeit, hozzá tudunk férni a listában tárolt adatokhoz. Így már a \texttt{print()}-et tagfüggvény helyett szabad függvényként is megírhatjuk.
-  Amennyiben lehetőségünk van egy függvényt szabad (osztályon kívüli) függvényként megírni, érdemes élni a lehetőséggel. Ezáltal az osztályaink kisebbek és könnyebben érthetőek lesznek.
+	Ezzel készen is van az iterátorunk, azonban ne feledjük el, hogy az \texttt{Iterator} csak egy pointer osztályba csomagolva, mellyel hozzá tudunk férni a lista elemeihez. Az előbb említett probléma, miszerint minden függvény ami a listához hozzá akar férni tagfüggvénnyé kéne tenni, megoldódott: példaképp a \texttt{print()}-et tagfüggvényből szabad, osztályon kívüli függvényt csinálhatunk.
+ 	
+ 	Amennyiben lehetőségünk van egy függvényt szabad (osztályon kívüli) függvényként megírni, érdemes élni a lehetőséggel. Ezáltal az osztályaink kisebbek és könnyebben érthetőek lesznek.
 	\begin{lstlisting}
 void print(List &l)
 {
@@ -449,22 +549,19 @@ void print(List &l)
 	Nézzük meg, hogy miért jobb az iterátor, mint a felsoroló. Annyi \texttt{Iterator}-t hozunk létre, amennyit csak akarunk, nem vagyunk korlátozva a \texttt{cursor}ok darabszáma által. Az iterátorok emellett tetszőlegesen tárolhatóak, átadhatóak függvényeknek. Nincs elrejtve az objektum belsejébe. Továbbá, tudjuk módosítani a listában található elemeket anélkül, hogy a lista reprezentációját ismernünk kellene. Egy iterátorokat használó kód módosítása nélkül megváltoztatható a lista belső reprezentációja. Ez lehetővé teszi azt, hogy több programozó csapatban dolgozzon, egymástól független kódrészleteket úgy tudjon módosítani, hogy ne kelljen egymás kódját átírni.
 	
 	\medskip
-	Azon metódusok, amik után \texttt{const} kulcsszó szerepel (ld. fenti példa) nem tudják megváltoztatni az adott osztály adattagjait. Ezeket a metódusokat \textbf{konstans metódusok}nak (\textit{const method}) hívják. Egy konstans objektumon csak akkor lehet meghívni egy metódust, ha az a metódus konstans.
+	Azon metódusok, amik után \texttt{const} kulcsszó szerepel nem tudják megváltoztatni az adott osztály adattagjait. Ezeket a metódusokat \textbf{konstans metódusok}nak (\textit{const method}) hívják. Egy konstans objektumon csak akkor lehet meghívni egy metódust, ha az a metódus konstans.
 	
 	\medskip
 	Megfigyelhető, hogy \texttt{print} nem módosítja a paraméterként kapott listát, így átvehetnénk konstans referenciával is. Ennek az eredménye fordítási hiba: az \texttt{end} és \texttt{begin} nem konstans metódusok, hiszen ami iterátort visszaad, azokon keresztül tudjuk módosítani az objektumot.
 	\begin{note}
-		Ami lehet \texttt{const}, az \textbf{legyen} \texttt{const}!
+		Ami lehet \texttt{const}, az \textbf{legyen} \texttt{const}! Például, rögtön megállapítható hogy az \texttt{Iterator} osztály \texttt{==} és \texttt{!=} operátorai nyugodtan lehetnek konstans metódusok is.
 	\end{note}
 	\subsection{Konstans iterátorok}
-	Erre a megoldás, ha konstans iterátort is írunk, ami egy konstansra mutató mutató általánosítása.
+	Erre a megoldás, ha konstans iterátort is írunk, ami egy konstans\textbf{ra} mutató pointer általánosítása.
 \begin{lstlisting}
 class List;
 
-class Iterator
-{
-	//...
-};
+class Iterator {/* ... */};
 
 class ConstIterator
 {
@@ -500,8 +597,8 @@ class List
 	//...
 };
 
-Iterator Iterator::operator++() {//...}
-int& Iterator::operator*() {//...}
+Iterator Iterator::operator++() {/* ... */}
+int& Iterator::operator*() {/* ... */}
 
 ConstIterator ConstIterator::operator++()
 {
@@ -513,11 +610,14 @@ int ConstIterator::operator*() const
 	return p->data;
 }
 \end{lstlisting}
+	\begin{note}
+		Ahogy az korábban említve volt, azok a tagfüggvények, melyek konstansságban nem egyeznek meg (pl. az \texttt{Iterator}-ral visszatérő \texttt{begin} és \texttt{end} tagfüggvények nem konstansok, míg a \texttt{ConstIterator}-ral visszatérő \texttt{begin} és \texttt{end} azok), azok különböző függvények számítanak (azaz, a \texttt{begin} és az \texttt{end} két-két overload-dal rendelkeznek).
+	\end{note}
 	Egy \texttt{const List} típusú objektumon csak a konstans metódusok hívhatóak meg, így a meghívott \texttt{begin()} visszatérési értékének típusa \texttt{ConstIterator} lesz. Egy nem konstans \texttt{List} objektumnál viszont \texttt{Iterator} lesz.
 	\begin{lstlisting}
 int main()
 {
-	List head(8);
+	List head(8); //nem const
 	head.add(7);
 	head.add(2);
 	{
@@ -533,12 +633,33 @@ class ConstIterator
 public:
 	ConstIterator(Iterator &other) : p(other.p) {}
 	//...
-}
+};
 	\end{lstlisting}
 	Emlékezzünk, hogy az \texttt{Iterator}-nak a \texttt{p} adattagja privát. A forduló kódhoz egy friend deklaráció bevezetése szükséges!
 	
 	Meglepő lehet, hogy az értékadás egy új konstruktor bevezetését követően le fog fordulni. A \texttt{head.begin()} a fenti esetben egy \texttt{Iterator}-t ad vissza, mivel \texttt{head} nem konstans! Eztán a fordító az imént megírt konstruktor segítségével az \texttt{Iterator} típusú változóból készít egy \texttt{ConstIterator} típusút. Ezzel \textit{implicit kódon átkonvertálja} \texttt{Iterator}-t \texttt{ConstIterator}-rá, és utána hívja meg a másoló konstruktort. 
 	
+	\subsection{Explicit konstruktorok}
+	Azt, hogy az egy paraméteres konstruktorokat a fordító implicit konverzióra felhasználja a fenti módon, megtilthatjuk itt is, ha \texttt{explicit} kulcsszót írunk a konstruktor elé.
+	
+	\begin{lstlisting}
+class ConstIterator
+{
+	//...
+public:
+	explicit ConstIterator(Iterator &other) : p(other.p) {}
+	//...
+};
+	\end{lstlisting}
+	Jelen esetben nem akarjuk a konverziót megtiltani, lévén az \texttt{Iterator} és a \texttt{ConstIterator} hasonló feladatot lát el. Nézzük meg az eddigi kódjainket. Okozhat valahol meglepetést egy konverzió? A \texttt{List} egyik konstruktra gyanús lehet. Ha egy függvény listát vár paraméterül, egy darab \texttt{int}-et is elfogad, hisz a \texttt{List} konstruktorát felhasználva tudott volna csinálni abból az \texttt{int}-ből egy egy elemű listát! Ezt elkerülendő, tegyük a \texttt{List} konstruktorát \texttt{explicit}-té.
+	\begin{lstlisting}
+class List
+{
+public:
+	explicit List(const int _data, List *_next = 0) : data(_data), next(_next) {}
+	//...
+};
+	\end{lstlisting}
 	\subsection{Konverziós operátor}
 	Más módon is át lehet konvertálni egy \texttt{Iterator} típusú objektumot \texttt{ConstIterator} típusúvá. Azzal, hogy létrehozunk egy un. \textbf{konverziós operátor}t (\textit{conversion operator} vagy \textit{user defined conversion}). 
 	\begin{lstlisting}
@@ -594,25 +715,4 @@ int main()
 	\begin{note}
     Amikor lehetőségünk van rá, használjunk egy paraméteres konstruktorokat a konverzióra. Amennyiben ahhoz az osztályhoz, amivé konvertálni szeretnénk, nem adhatunk hozzá új konstruktort (például könyvtári osztály), akkor használjuk a konverziós operátort. 
 	\end{note}
-	\subsection{Explicit konstruktorok}
-	Azt, hogy az egy paraméteres konstruktorokat a fordító implicit konverzióra felhasználja a fenti módon, megtilthatjuk itt is, ha \texttt{explicit} kulcsszót írunk a konstruktor elé.
-	
-\begin{lstlisting}
-class ConstIterator
-{
-	//...
-public:
-	explicit ConstIterator(Iterator &other) : p(other.p) {}
-	//...
-}
-\end{lstlisting}
-	Jelen esetben nem akarjuk a konverziót megtiltani, lévén az \texttt{Iterator} és a \texttt{ConstIterator} hasonló feladatot lát el. Nézzük meg az eddigi kódjainket. Okozhat valahol meglepetést egy konverzió? A \texttt{List} egyik konstruktra gyanús lehet. Ha egy függvény listát vár paraméterül, egy darab \texttt{int}-et is elfogad, hisz a \texttt{List} konstruktorát felhasználva tudott volna csinálni abból az \texttt{int}-ből egy egy elemű listát! Ezt elkerülendő, tegyük a \texttt{List} konstruktorát \texttt{explicit}-té.
-	\begin{lstlisting}
-class List
-{
-	//...
-	explicit List(const int _data, List *_next = 0) : data(_data), next(_next) {}
-	//...
-}
-	\end{lstlisting}
 \end{document}
