--- a/11gy_cpp/11gy_cpp.tex
+++ b/11gy_cpp/11gy_cpp.tex
@@ -1066,4 +1066,23 @@ int main()
 }
 	\end{lstlisting}
 	Hibaüzenetet kapunk, miszerint a template paraméter dedukció nem volt sikeres, hiszen \texttt{T}-nek vagy \texttt{int}-nek, vagy \texttt{double}-nak kéne lennie, de egyszerre nem tud az lenni.
+	\begin{thebibliography}{1}
+		
+		\bibitem{xazax} Horváth Gábor gyakorlatai, 2015/2016/2 ill. 2016/2017/1.
+		
+		\bibitem{pataki} Pataki Norbert előadásai, 2015/2016/2.
+		
+		\bibitem{cppref} Cppreference, \url{http://en.cppreference.com/w/}
+		
+		\bibitem{notes} Scott Meyers: \textit{Effective C++}, 1997.
+		
+		\bibitem{notes} Scott Meyers: \textit{The Most Important Design Guideline}, \url{https://www.youtube.com/watch?v=5tg1ONG18H8&t}, 3014.
+		
+		\bibitem{impj}  Microsoft Developer Network, \textit{Tokens (C++)}, \url{https://msdn.microsoft.com/en-us/library/3yx2xe3h.aspx}
+		
+		\bibitem{undefined} Chandler Carruth: \textit{Garbage In, Garbage Out: Arguing about Undefined Behavior...}, \url{https://www.youtube.com/watch?v=yG1OZ69H_-o}, CppCon 2016
+		
+		\bibitem{brunner} Brunner Tibor honlapja
+		
+	\end{thebibliography}
 \end{document}
