Added a small biblography.

--- a/12gy_cpp/12gy_cpp.tex
+++ b/12gy_cpp/12gy_cpp.tex
@@ -604,4 +604,23 @@ public:
 };
 	\end{lstlisting}
 	Így az ötöst is elértük.
+	\begin{thebibliography}{1}
+		
+		\bibitem{xazax} Horváth Gábor gyakorlatai, 2015/2016/2 ill. 2016/2017/1.
+		
+		\bibitem{pataki} Pataki Norbert előadásai, 2015/2016/2.
+		
+		\bibitem{cppref} Cppreference, \url{http://en.cppreference.com/w/}
+		
+		\bibitem{notes} Scott Meyers: \textit{Effective C++}, 1997.
+		
+		\bibitem{notes} Scott Meyers: \textit{The Most Important Design Guideline}, \url{https://www.youtube.com/watch?v=5tg1ONG18H8&t}, 3014.
+		
+		\bibitem{impj}  Microsoft Developer Network, \textit{Tokens (C++)}, \url{https://msdn.microsoft.com/en-us/library/3yx2xe3h.aspx}
+		
+		\bibitem{undefined} Chandler Carruth: \textit{Garbage In, Garbage Out: Arguing about Undefined Behavior...}, \url{https://www.youtube.com/watch?v=yG1OZ69H_-o}, CppCon 2016
+		
+		\bibitem{brunner} Brunner Tibor honlapja
+		
+	\end{thebibliography}
 \end{document}
